force-app/main/default/objects/Webhook_Setting__c/fields/Add_activity_to_all_records__c.field-meta.xml
<CustomField>
    <fullName>Add_activity_to_all_records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add activity to all records</label>
    <type>Checkbox</type>
</CustomField>