force-app/main/default/objects/Webhook_Setting__c/fields/Save_To_Activity_History__c.field-meta.xml
<CustomField>
    <fullName>Save_To_Activity_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save To Activity History</label>
    <type>Checkbox</type>
</CustomField>